# ai-act-sound-data-science

./: .envrc-example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  start
.github/workflows/: ci.yml
config/: data.yaml
data/: aggregate-claim-1.csv  aggregate-claim.csv  customer-health.csv  simplified-customer-health.csv
notebooks/: data-quality.ipynb  eda-completed.ipynb  extra-exercises.ipynb  model-selection-training.ipynb
notebooks/completed/: data-quality.ipynb  model-selection-training.ipynb
src/workshop/: possible_data_contract.py
tests/: test_notebooks.py  test_possible_data_contract.py
